syntax = "proto3";

package productUser;

option csharp_namespace = "Proto.ProductUser";

service ProductUserService {
    rpc AddManufacturerProduct(ProductRequest) returns (ProductResponse);
    rpc RemoveManufacturerProduct(ProductRequest) returns (ProductResponse);
    rpc GetManufacturers(ManufacturersRequest) returns (ManufacturerResponse);
    rpc CreateManufacturersDailyReport(ManufacturersDailyReportRequest) returns (ProductResponse);
}

message ProductRequest {
    string manufacturer_id = 1;
    string product_id = 2;
}

message ProductResponse {
    bool success = 1;
    string message = 2;
}

message ManufacturersRequest { }

message ManufacturerResponse {
    bool success = 1;
    string message = 2;
    repeated string manufacturer_id = 3;
}

message ProductViews {
    string key = 1;
    int32 value = 2;
}

message ManufacturerDailyReport {
    string manufacturer_id = 1;
    repeated ProductViews products_views = 2;
}

message ManufacturersDailyReportRequest {
    repeated ManufacturerDailyReport reports = 1;
}
